# mr-roller-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  compose.yaml  mr-roller-discord.toml  mr-roller.toml  todo.md
docs/: GAME.md  architecture.md  discord.md
docs/plans/: 2026-04-28-core-restructure-design.md  2026-04-29-discord-version-plan.md  2026-04-29-discord-version-todo.md  2026-04-29-public-discord-multitenant-plan.md  2026-04-29-public-discord-multitenant-todo.md
mr-roller/: Cargo.toml
mr-roller-cli/: Cargo.toml
mr-roller-cli/src/: main.rs
mr-roller-discord/: Cargo.toml
mr-roller-discord/migrations/: 202604300001_create_multitenant_schema.sql  202605010001_add_player_tutorial_flags.sql  202605020001_create_item_use_history.sql
mr-roller-discord/src/: bot.rs  commands.rs  config.rs  main.rs
mr-roller-discord/src/commands/: admin.rs  mod.rs  player.rs  setup.rs
mr-roller-discord/src/events/: mod.rs  publisher.rs  scheduler.rs
mr-roller-discord/src/render/: components.rs  embeds.rs  mod.rs
mr-roller-discord/src/storage/: mod.rs  postgres.rs  registry.rs
mr-roller/migrations/: 202604290001_create_initial_schema.sql  202604290002_create_active_events.sql  202605010001_add_player_tutorial_flags.sql  202605020001_create_item_use_history.sql
mr-roller/src/: command.rs  config.rs  cooldown.rs  errors.rs  event_scheduler.rs  game.rs  lib.rs  output.rs  response.rs  store.rs
mr-roller/src/command/: admin.rs  common.rs  events.rs  inventory.rs  leaderboard.rs  shop.rs  start.rs  tests.rs  use_item.rs
mr-roller/src/game/: event.rs  inventory.rs  item.rs  player.rs  state.rs
mr-roller/src/game/item/: dice.rs  tokens.rs
mr-roller/src/game/item/dice/: basic_dice.rs  cursed_dice.rs  lucky_dice.rs
mr-roller/src/game/item/tokens/: reroll_token.rs
mr-roller/src/store/: event.rs  history.rs  inventory.rs  leaderboard.rs  mod.rs  player.rs  sqlite.rs
