[package]
name = "mr-roller-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr-roller = { path = "../mr-roller" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1.4.1", features = ["v4"] }

