[package]
name = "mr-roller-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
mr-roller = { path = "../mr-roller" }
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
