[package]
name = "mr-roller-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
mr-roller = { path = "../mr-roller" }
poise = "0.6"
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
