[package]
name = "mr-roller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4.31"
indoc = "2.0.4"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = "0.7.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
